<resources>
    <string name="app_name">Lab8</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main Menu</string>
    <string name="title">STEPS TOTAL</string>
    <string name="inputHint">Enter steps amount</string>
    <string name="countTV">Количество шагов:</string>
    <string name="count">0</string>
    <string name="countBtn">ADD</string>
    <string name="deleteCount">CLEAR</string>
</resources>